recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:19: error: ')' expected but ';' found.
    return treedroit(steps-1,length;angle,shrink);
                                   ^Tree:19: error: ';' expected but ',' found.
    return treedroit(steps-1,length;angle,shrink);
                                         ^Tree:29: error: ')' expected but ';' found.
    return treedroit(steps-1,length;angle,shrink);
                                   ^Tree:29: error: ';' expected but ',' found.
    return treedroit(steps-1,length;angle,shrink);
                                         ^